coded header css layout, image, colors

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <button class="sign2">Sign up</button>
                 </div>
                 <div class="right">
-                    <img src="" alt="this is a placeholder for an image">
+                    <img src="https://petapixel.com/assets/uploads/2022/12/what-is-unsplash-800x420.jpg" alt="this is a placeholder for an image" height="300" width="500">
                 </div>
             </div>
         </div>
