--- a/index.html
+++ b/index.html
@@ -28,21 +28,25 @@
         </div>
         <div class="main">
             <div class="top">
-                <div class="paragraph">Some random information.</div>
-                <div class="container"></div>
-                    <div class="box 1"></div>
-                        <img src="" alt="box 1 illustration">
+                <div class="descriptor">Some random information.</div>
+                <div class="container">
+                    <div class="box 1">
+                        <img src="https://plus.unsplash.com/premium_photo-1681400548054-93f9d085a872?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8c3F1YXJlJTIwaW1hZ2V8ZW58MHx8MHx8fDA%3D" alt="box 1 illustration" width="150px" height="150px">
                         <div class="text">this is some subtext under an illustration or image</div>
-                    <div class="box 2"></div>
-                    <img src="" alt="box 2 illustration">
+                    </div>
+                    <div class="box 2">
+                        <img src="https://images.unsplash.com/photo-1722495178488-c8056c4ec2c0?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8c3F1YXJlJTIwaW1hZ2V8ZW58MHx8MHx8fDA%3D" alt="box 2 illustration" width="150px" height="150px">
                         <div class="text">this is some subtext under an illustration or image</div>
-                    <div class="box 3"></div>
-                    <img src="" alt="box 3 illustration">
+                    </div>
+                        <div class="box 3">
+                        <img src="https://images.unsplash.com/photo-1706720092267-9f45ba93e66c?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fHNxdWFyZSUyMGltYWdlfGVufDB8fDB8fHww" alt="box 3 illustration" width="150px" height="150px">
                         <div class="text">this is some subtext under an illustration or image</div>
-                    <div class="box 4"></div>
-                    <img src="" alt="box 4 illustration">
+                    </div>
+                        <div class="box 4">
+                        <img src="https://images.unsplash.com/photo-1706720091754-ef4fad47d10d?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fHNxdWFyZSUyMGltYWdlfGVufDB8fDB8fHww" alt="box 4 illustration" width="150px" height="150px">
                         <div class="text">this is some subtext under an illustration or image</div>
-                </div>
+                    </div>
+                    </div>
             <div class="middle">
                 <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
                 <div class="quoter">-Thor, God of Thunder</div>
