--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <body>
         <div class="header">
             <div class="heading">
-                <div class="logo">Header Logo</div>
+                <div class="logo">WanderWay</div>
                 <ul class="links">
-                    <li><a href="#">header link one</a></li>
-                    <li><a href="#">header link two</a></li>
-                    <li><a href="#">header link three</a></li>
+                    <li><a href="#">Tours</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Contact Us</a></li>
                 </ul>
             </div>
             <div class="signup">
                 <div class="left">
-                    <div class="title">This website is awesome</div>
-                    <div class="paragraph">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
+                    <div class="title">Want to travel the world?</div>
+                    <div class="paragraph">Discover unforgettable adventures with our curated travel tours! Whether you're dreaming of scenic escapes or thrilling excursions, sign up now to explore destinations handpicked just for you. Your next journey starts here!</div>
                     <button class="sign1">Sign up</button>
                 </div>
                 <div class="right">
@@ -28,39 +28,38 @@
         </div>
         <div class="main">
             <div class="top">
-                <div class="descriptor">Some random information.</div>
+                <div class="descriptor">Featured tour packages</div>
                 <div class="container">
                     <div class="box 1">
-                        <img src="https://plus.unsplash.com/premium_photo-1681400548054-93f9d085a872?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8c3F1YXJlJTIwaW1hZ2V8ZW58MHx8MHx8fDA%3D" alt="box 1 illustration" width="150px" height="150px">
-                        <div class="text">this is some subtext under an illustration or image</div>
+                        <img src="https://plus.unsplash.com/premium_photo-1681255760839-6581e2eb3e96?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8c3VtbWVyfGVufDB8fDB8fHww" alt="An island beach." width="150px" height="150px">
+                        <div class="text">Escape to the shore for the perfect beach getaway.</div>
                     </div>
                     <div class="box 2">
-                        <img src="https://images.unsplash.com/photo-1722495178488-c8056c4ec2c0?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8c3F1YXJlJTIwaW1hZ2V8ZW58MHx8MHx8fDA%3D" alt="box 2 illustration" width="150px" height="150px">
-                        <div class="text">this is some subtext under an illustration or image</div>
+                        <img src="https://www.zdnet.com/a/img/resize/4031321146ad6df3889674fe60f557d95966fc0e/2019/09/05/7c148e17-3f7e-4166-b755-324799ba0c7a/atanas-malamov-tpmav6c33de-unsplash.jpg?auto=webp&width=1280" alt="A mountain and a lake." width="150px" height="150px">
+                        <div class="text">Breathe in the crisp mountain air alongside a lake.</div>
                     </div>
                     <div class="box 3">
-                        <img src="https://images.unsplash.com/photo-1706720092267-9f45ba93e66c?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fHNxdWFyZSUyMGltYWdlfGVufDB8fDB8fHww" alt="box 3 illustration" width="150px" height="150px">
-                        <div class="text">this is some subtext under an illustration or image</div>
+                        <img src="https://images.unsplash.com/photo-1658662882873-df79fb55df4c?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bmF0dXJlJTIwd2F0ZXJ8ZW58MHx8MHx8fDA%3D" alt="Waterfalls within a hill range." width="150px" height="150px">
+                        <div class="text">Feel the rush of nature beside a hidden waterfall.</div>
                     </div>
                     <div class="box 4">
-                        <img src="https://images.unsplash.com/photo-1706720091754-ef4fad47d10d?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fHNxdWFyZSUyMGltYWdlfGVufDB8fDB8fHww" alt="box 4 illustration" width="150px" height="150px">
-                        <div class="text">this is some subtext under an illustration or image</div>
+                        <img src="https://plus.unsplash.com/premium_photo-1699534957345-21ec96f6fad2?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTN8fGRlc2VydCUyMGxhbmRzY2FwZXxlbnwwfHwwfHx8MA%3D%3D" alt="A desert." width="150px" height="150px">
+                        <div class="text">Discover the golden horizons of the desert.</div>
                     </div>
                 </div>
             </div>
             <div class="middle">
-                <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
-                <div class="quoter">-Thor, God of Thunder</div>
+                <div class="quote">Life begins at the end of your comfort zone. Embrace new experiences, meet new people, and see the world in ways you never imagined.</div>
+                <div class="quoter">- Neale Donald Walsch</div>
             </div>
             <div class="bottom">
                 <div class="action">
-                    <div class="up">Call to action! It's time!</div>
-                    <div class="down">Sign up for our product by clicking that button right over there!</div>
+                    <div class="up">Sign up before it's too late!</div>
+                    <div class="down">Take 5 minutes of your time and book a tour package with us before time runs out!</div>
                 </div>
                 <button class="sign2">Sign up</button>
             </div>
         </div>
         <div class="footer">Copyright The Odin Project 2021</div>
-    
     </body>
 </html>
